<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/selector_home"
        android:title="@string/home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/selector_search"
        android:title="@string/search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/tripFragment"
        android:icon="@drawable/selector_calendar"
        android:title="@string/trip"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/guideFragment"
        android:icon="@drawable/selector_map"
        android:title="@string/guide"
        app:showAsAction="ifRoom" />
</menu>