<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="tripPlanAdapter"
            type="com.caganbicakci.travelguideapp.presentation.tripplan.TripPlansAdapter" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.tripplan.TripFragment">

        <TextView
            android:id="@+id/searchPageTitle"
            style="@style/pageTitleStyle"
            android:text="@string/trip"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabTripsBookmarks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            app:layout_constraintStart_toStartOf="@id/searchPageTitle"
            app:layout_constraintTop_toBottomOf="@id/searchPageTitle"
            app:tabInlineLabel="true"
            app:tabMode="scrollable"
            app:tabTextAppearance="@style/tabLayoutTextStyle">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_brief_case_filled"
                android:text="@string/trips" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_bookmark"
                android:text="@string/Bookmarks" />

        </com.google.android.material.tabs.TabLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tripPlanRecyclerView"
            android:layout_width="400dp"
            android:layout_height="600dp"
            android:adapter="@{tripPlanAdapter}"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabTripsBookmarks"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addTripPlanBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_80sdp"
            android:contentDescription="@string/add_trip_plan"
            android:src="@drawable/ic_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:tint="@null" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>