<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="mightNeedTheseAdapter"
            type="com.caganbicakci.travelguideapp.presentation.guide.MightNeedTheseAdapter" />

        <variable
            name="topPickArticlesAdapter"
            type="com.caganbicakci.travelguideapp.presentation.guide.TopPickArticlesAdapter" />

        <variable
            name="categoryAdapter"
            type="com.caganbicakci.travelguideapp.presentation.guide.TravelCategoryListAdapter" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".presentation.guide.GuideFragment">

            <TextView
                android:id="@+id/searchPageTitle"
                style="@style/pageTitleStyle"
                android:layout_marginStart="@dimen/_8sdp"
                android:text="@string/guide" />

            <TextView
                android:id="@+id/tvMightNeedCategory"
                style="@style/categoryTitleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:text="@string/might_need_these" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:adapter="@{mightNeedTheseAdapter}"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/searchBar"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_16sdp"
                app:layout_constraintTop_toBottomOf="@id/searchPageTitle">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:drawableEnd="@drawable/ic_search_view"
                    android:hint="@string/search_hint_guide" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:adapter="@{categoryAdapter}"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <TextView
                android:id="@+id/tvTopPickCategory"
                style="@style/categoryTitleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:text="@string/top_pick_articles" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:adapter="@{topPickArticlesAdapter}"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        </LinearLayout>
    </ScrollView>
</layout>